# FunFixForWindowsSearch

./: .gitignore  CHANGELOG.md  Cargo.toml  GPU_PORT_PLAN.md  IMPLEMENTATION_REPORT.md  README.md  package-lock.json  package.json
RustSearch/: Cargo.toml  README.md  REBUILD_PLAN.md
RustSearch/src/: app_state.rs  commands.rs  gpu_ui.rs  indexing.rs  indexing_ntfs.rs  main.rs  platform.rs  search.rs  tui_view.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-ui/: index.html  package.json  tsconfig.json
apps/desktop/src-ui/src/: App.svelte  main.ts  styles.css
apps/native/: Cargo.toml
apps/native/src/: commands.rs  indexing_ntfs.rs  main.rs  search.rs  search_worker.rs  storage.rs  ui.rs  update.rs  windowing.rs
crates/wizcore-config/: Cargo.toml
crates/wizcore-config/src/: lib.rs
crates/wizcore-index/: Cargo.toml
crates/wizcore-index/src/: lib.rs
crates/wizcore-query/: Cargo.toml
crates/wizcore-query/src/: lib.rs
crates/wizcore-shell/: Cargo.toml
crates/wizcore-shell/src/: lib.rs
crates/wizcore-watch/: Cargo.toml
crates/wizcore-watch/src/: lib.rs
crates/wizd/: Cargo.toml
crates/wizd/src/: lib.rs
docs/: architecture.md  ipc.md
src/: app_state.rs  commands.rs  gpu_ui.rs  indexing.rs  indexing_ntfs.rs  main.rs  search.rs  search_worker.rs  storage.rs  tui_view.rs
