[package]
name = "rustsearch"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1"
bincode = "1"
eframe = "0.33"
egui = "0.33"
egui_ratatui = "2.1.0"
global-hotkey = "0.7"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
soft_ratatui = { version = "0.1.3", features = ["unicodefonts"] }
tray-icon = "0.21"
walkdir = "2"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Ioctl",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
