[package]
name = "wizmini-native"
version.workspace = true
edition.workspace = true

[dependencies]
iced = { workspace = true, features = ["tokio"] }
serde = { workspace = true }
bincode = "1"
global-hotkey = "0.7"
tray-icon = "0.21"
walkdir = "2"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Ioctl",
] }
wizd = { path = "../../crates/wizd" }
